vt-700: konvertteriparametrien lisäys ja poisto toimii

--- a/src/main/webapp/html/laskentakaava/laskentakaavapuu.html
+++ b/src/main/webapp/html/laskentakaava/laskentakaavapuu.html
@@ -151,7 +151,7 @@
     <div class="frame">
         <span class="icon">&#8302;</span>
         <span class="label"
-              ng-click="kaavaInformationView(funktiowrapper.lapsi, true)">{{funktiowrapper.lapsi.syoteparametrit[0].arvo}} - Nimetty arvo</span>
+              ng-click="kaavaInformationView(funktiowrapper.lapsi, true)">{{funktiowrapper.lapsi.syoteparametrit[0].arvo}} - Nimetty lukuarvo</span>
     </div>
 </script>
 
@@ -159,7 +159,7 @@
 <script type="text/ng-template" id="nimetty_totuusarvo.html">
     <div class="frame">
         <span class="icon">&#8302;</span>
-        <span class="label" ng-click="kaavaInformationView(funktiowrapper.lapsi, true)">{{funktiowrapper.lapsi.syoteparametrit[0].arvo}} - Nimetty arvo</span>
+        <span class="label" ng-click="kaavaInformationView(funktiowrapper.lapsi, true)">{{funktiowrapper.lapsi.syoteparametrit[0].arvo}} - Nimetty totuusarvo</span>
     </div>
 </script>
 
