--- a/src/main/webapp/html/jarjestyskriteeri.html
+++ b/src/main/webapp/html/jarjestyskriteeri.html
@@ -26,8 +26,8 @@
                 <div ng-repeat="data in group.result" class="field-container-radio">
                     <label>
                         <input type="radio" name="laskentakaava" value="{{data.id}}"
-                               ng-model="model.jarjestyskriteeri.laskentakaava_id"
-                               ng-required="!model.jarjestyskriteeri.laskentakaava_id"/>
+                               ng-model="model.jarjestyskriteeri.laskentakaavaId"
+                               ng-required="!model.jarjestyskriteeri.laskentakaavaId"/>
 
                         <span ng-bind="data.nimi"></span>(<span ng-bind="data.id"></span>)
                     </label>
